# Viper

./: .gitignore  CMakeLists.txt  README.md
include/: viper.hpp
src/cpp/: main.cpp  piper.cpp  viper.cpp  viper.hpp
src/cpp/piper/: main.cpp  piper copy.cpp  piper copy.hpp
src/python/: requirements.txt
src/python/piper_train/vits/monotonic_align/: core.c
